fix corretto overflow della pagina

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 #page{
-    width: 100vw;
+    max-width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
